<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SendActivity">

    <TextView
        android:id="@+id/AuthorLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_author"
        android:labelFor="@id/AuthorEt"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/AuthorEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/author"
        android:minHeight="48dp"
        android:inputType="text"
        tools:ignore="LabelFor"
        android:importantForAutofill="no" />

    <TextView
        android:id="@+id/MessageLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_message"
        android:labelFor="@id/AuthorEt"
        android:textStyle="bold"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/messageEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/message_limit"
        android:maxLength="150"
        android:minHeight="48dp"
        android:textColorHint="#546E7A"
        android:inputType="text"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/SendSubmitBt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/send" />
</LinearLayout>